--- a/minesweeper.css
+++ b/minesweeper.css
@@ -44,7 +44,7 @@ body {
 }
 
 div.mine, div.mine:hover {
-  background: no-repeat center/60% url("images/bomb.svg") crimson;
+  background: no-repeat center/60% url("https://spng.pngfly.com/20180606/kug/kisspng-pembroke-welsh-corgi-cardigan-welsh-corgi-actor-co-people-talking-5b17f63f7d0583.7883925915282970235121.jpg") white;
 }
 
 div.hidden {
